# presentation-generator

./: .gitignore  QUICKSTART.md  README.md  debug_design.py  env.example  master_template.pptx  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  verify_fixes.py  verify_generation.py  verify_overflow.py  verify_title_overflow.py
frontend/: package-lock.json  package.json
presentations/: Content_Overflow_Ver_gamma_20251124_002021.pptx  Dr_APJ_Abdul_Kalam_T_gamma_20251123_181851.pptx  Future_of_AI_20251121_210741.pptx  Introduction_to_AI_20251117_181536.pptx  Introduction_to_AI_20251121_213936.pptx  Introduction_to_AI_Brief_Overview_for_Business_Pro_20251117_153507.pptx  Introduction_to_AI_Understanding_the_Future_of_Bus_20251117_145720.pptx  Introduction_to_AI_Unveiling_the_Future_of_Busines_20251117_124324.pptx  Introduction_to_AI_Unveiling_the_Transformative_Po_20251117_110934.pptx  Introduction_to_AI_gamma_20251122_064012.pptx  Introduction_to_AI_gamma_20251122_161952.pptx  Introduction_to_AI_gamma_20251123_082026.pptx  Introduction_to_AI_gamma_20251123_115103.pptx  Introduction_to_AI_gamma_20251123_122833.pptx  Introduction_to_AI_in_Brief_An_Overview_for_Busine_20251117_125504.pptx  Introduction_to_AI_in_Brief_Transforming_the_World_20251117_125835.pptx  Introduction_to_AI_in_Brief_Understanding_the_Tran_20251117_152704.pptx  Introduction_to_AI_in_Business_Unlocking_Potential_20251117_112211.pptx  Introduction_to_AI_in_Business_Unlocking_Potential_20251117_150702.pptx  Introduction_to_AI_ocean_breeze_20251122_085107.pptx  (+110 more)
src/: __init__.py  main.py
(+22 files in other folders)
